--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcsh 'Shipwrecks -- Fiction'
 - !lcsh 'Conduct of life -- Fiction'
 - !lcsh 'Physicians -- Fiction'
+- GITenberg
 title: A Dream of the North Sea
 url: http://www.gutenberg.org/ebooks/14432
